# Diamond-Price-Predictor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  dvc.yaml  info.txt  init_setup.sh  pyproject.toml  setup.cfg  setup.py  template.py  test.py  test_all_features.py  test_features.py
.github/workflows/: ci.yml
airflow/dags/: batch_prediction.py  training_pipeline.py
artifacts/: model.pkl  preprocessor.pkl  test.csv  train.csv
config/: config.yaml
gemstack_mlops/components/: data_ingestion_component.py  data_transformation_component.py  data_validation_component.py  model_evaluation_component.py  model_trainer_component.py
gemstack_mlops/exception/: __init__.py
gemstack_mlops/pipeline/: prediction_pipeline.py  training_pipeline.py
gemstack_mlops/utils/: utils.py
mlruns/0/bba2fdaa60c142e79117fb1e80085b67/: meta.yaml
mlruns/0/bba2fdaa60c142e79117fb1e80085b67/metrics/: mae  r2  rmse
mlruns/0/bba2fdaa60c142e79117fb1e80085b67/tags/: mlflow.runName
mlruns/0/caa72861046d426b894517d6384f32ce/: meta.yaml
mlruns/0/caa72861046d426b894517d6384f32ce/metrics/: mae  r2  rmse
mlruns/0/caa72861046d426b894517d6384f32ce/tags/: mlflow.runName
mlruns/0/models/m-2717f71154be4ed9b12de04b6ad34361/: meta.yaml
mlruns/0/models/m-f6209c4ec12240658190d4d6f23c2698/: meta.yaml
mlruns_local/0/: meta.yaml
mlruns_local/0/1a550ffe02ab418c918b16ad62224c6d/: meta.yaml
mlruns_local/0/1a550ffe02ab418c918b16ad62224c6d/metrics/: mae  r2  rmse
mlruns_local/0/1a550ffe02ab418c918b16ad62224c6d/tags/: mlflow.runName
mlruns_local/0/324648c4204d45dba148b041ce938320/: meta.yaml
mlruns_local/0/324648c4204d45dba148b041ce938320/metrics/: mae  r2  rmse
mlruns_local/0/324648c4204d45dba148b041ce938320/tags/: mlflow.runName
src/logger/: __init__.py  logger.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: utils.py
templates/: compare.html  compare_result.html  form.html  index.html  result.html
tests/: test_predict_pipeline.py
(+28 files in other folders)
