[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemstack-mlops"
version = "0.1.0"
description = "Gemstack: opinionated MLOps template with MLflow, DVC, Airflow, and Flask"
readme = "README.md"
authors = [
    { name = "Aditya Swaroop" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["MLOps", "MLflow", "DVC", "Airflow", "Flask"]

[project.urls]
Homepage = "https://github.com/adityaswaroop/gemstack-mlops"
Repository = "https://github.com/adityaswaroop/gemstack-mlops"

[tool.setuptools.packages.find]
where = ["."]
