[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-price-predictor"
version = "1.0.0"
description = "Diamond Price Prediction MLOps - Production-ready ML pipeline for predicting diamond prices using advanced ML techniques"
readme = "README.md"
authors = [
    { name = "Diamond Price Predictor Team" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["diamond", "price-prediction", "machine-learning", "MLOps", "MLflow", "xgboost", "flask"]

[project.urls]
Homepage = "https://github.com/yourusername/diamond-price-predictor"
Repository = "https://github.com/yourusername/diamond-price-predictor"
Documentation = "https://diamond-price-predictor.readthedocs.io/"
Issues = "https://github.com/yourusername/diamond-price-predictor/issues"

[tool.setuptools.packages.find]
where = ["."]
